# django_dict_form

./: LICENSE  README.md  main.py  pyproject.toml
config/: asgi.py  settings.py  urls.py  wsgi.py
django_dict_form/: __init__.py  apps.py  form.py  models.py
django_json_form/: apps.py  form.py
tests/: forms.py  models.py  test_dict_form_instance.py  tests.py
tests/migrations/: 0001_initial.py
