[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "django-dict-form"
version = "0.11.0"
description = "Is a lightweight extension for Django Forms that adds serialization"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "django>=3.2",
]
license = "MIT"
authors = [
  { name = "Gleb Uvarov", email = "ugs1996@gmail.com" }
]
keywords = [
    "django",
    "django-forms"
]
classifiers = [
  "Programming Language :: Python :: 3",
  "Operating System :: OS Independent"
]

[project.urls]
Homepage = "https://github.com/Dradisen/django_dict_form"
Repository = "https://github.com/Dradisen/django_dict_form"
Issues = "https://github.com/Dradisen/django_dict_form/issues"
Documentation = "https://github.com/Dradisen/django_dict_form#readme"

[tool.ruff]
line-length = 100
target-version = "py39"

[tool.setuptools.packages.find]
where = ["."]
include = ["django_dict_form*"]

[tool.coverage.run]
branch = true
source = ["django_dict_form"]

[tool.coverage.report]
show_missing = true
skip_covered = true